app/frontend/shared/components/ListGroup/index.scss
.list-group {
  gap: 8px;
  display: flex;
  flex-direction: column;
  margin-bottom: 20px;

  &__item {
    background: rgba(#fff, 0.05);
    border: 1px solid rgba(#fff, 0.1);
    border-radius: 6px;
  }

  &__row {
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin-inline: 0;
    padding: 8px 12px;
    gap: 8px;
  }

  &__content {
    display: flex;
    justify-content: flex-start;
    padding: 0;
    flex: 1;
    gap: 8px;
    align-items: center;
    min-width: 0;

    > span {
      overflow: hidden;
      white-space: nowrap;
      text-overflow: ellipsis;
    }
  }

  &__actions {
    display: flex;
    gap: 4px;
    padding: 0;
  }
}

